# multi-delogo

./: .gitignore  Makefile.am  NEWS.md  README.md  README.pt_BR.md  autogen.sh  configure.ac  gtkshowframe.cpp  multiple-boxes.filter  showframe.cpp  showimage.cpp
docs/: Makefile.am  sample.mp4.copyright
docs/en/: README.md
docs/pt_BR/: README.md
m4/: wt_opencv.m4
po/: LINGUAS  Makevars  POTFILES.in  pt_BR.po
src/: Makefile.am  main.cpp
src/filter-generator/: Exceptions.hpp  FilterData.cpp  FilterData.hpp  FilterFactory.cpp  FilterFactory.hpp  FilterGenerator.cpp  FilterGenerator.hpp  FilterList.cpp  FilterList.hpp  Filters.cpp  Filters.hpp  FuzzyScriptGenerator.cpp  FuzzyScriptGenerator.hpp  IOUtils.cpp  IOUtils.hpp  Makefile.am  RegularScriptGenerator.cpp  RegularScriptGenerator.hpp  ScriptGenerator.hpp  filter-generator.cpp
src/gui/: .gitignore  Coordinator.cpp  Coordinator.hpp  ETRProgressBar.cpp  ETRProgressBar.hpp  EditAction.cpp  EditAction.hpp  EncodeWindow.cpp  EncodeWindow.hpp  EncodeWindow.ui  EncodeWindowUtil.cpp  EncodeWindowUtil.hpp  FFmpegExecutor.cpp  FFmpegExecutor.hpp  FilterList.cpp  FilterList.hpp  FilterListModel.cpp  FilterListModel.hpp  FilterPanelFactory.cpp  FilterPanelFactory.hpp  FilterPanels.cpp  FilterPanels.hpp  FilterType.cpp  FilterType.hpp  FindLogosWindow.cpp  FindLogosWindow.hpp  FindLogosWindow.ui  FrameNavigator.cpp  FrameNavigator.hpp  FrameNavigatorUtil.cpp  FrameNavigatorUtil.hpp  FrameView.cpp  FrameView.hpp  InitialWindow.cpp  InitialWindow.hpp  InitialWindow.ui  LogWindow.ui  Makefile.am  MovieWindow.cpp  MovieWindow.hpp  (+16 more)
src/gui/common/: Exceptions.hpp  FrameProvider.hpp  LogoFinder.hpp  Rectangle.hpp
src/opencv-frame-provider/: Makefile.am  OpenCVFrameProvider.cpp  OpenCVFrameProvider.hpp  OpenCVFrameProviderFactory.cpp
src/opencv-logo-finder/: FilterListAdapter.cpp  FilterListAdapter.hpp  IntervalCalculator.cpp  IntervalCalculator.hpp  LogoFinderFactory.cpp  Makefile.am  OpenCVLogoFinder.cpp  OpenCVLogoFinder.hpp  logo-finder.cpp  matcher.cpp
test/: Makefile.am  TestHelpers.hpp
test/filter-generator/: .gitignore  CutFilterTest.cpp  DelogoFilterTest.cpp  DrawboxFilterTest.cpp  FilterDataTest.cpp  FilterFactoryTest.cpp  FilterListTest.cpp  FuzzyScriptGeneratorTest.cpp  IOUtilsTest.cpp  Makefile.am  NullFilterTest.cpp  RegularScriptGeneratorTest.cpp  ReviewFilterTest.cpp  TestCutFilter.cpp  TestDelogoFilter.cpp  TestDrawboxFilter.cpp  TestFilterData.cpp  TestFilterFactory.cpp  TestFilterGenerator.cpp  TestFilterList.cpp  TestFuzzyScriptGenerator.cpp  TestHelpers.hpp  TestIOUtils.cpp  TestNullFilter.cpp  TestRegularScriptGenerator.cpp
test/gui/: .gitignore  ETRProgressBarTest.cpp  EncodeWindowTest.cpp  EncodeWindowUtilTest.cpp  FFmpegExecutorTest.cpp  FilterListModelTest.cpp  FilterPanelFactoryTest.cpp  FrameNavigatorUtilTest.cpp  Makefile.am  SelectionRectTest.cpp  TestEncodeWindow.cpp  TestFilterListModel.cpp  TestFilterPanelFactory.cpp  TestFrameNavigatorUtil.cpp  TestSelectionRect.cpp  UtilsTest.cpp
test/opencv-logo-finder/: .gitignore  IntervalCalculatorTest.cpp  Makefile.am  OpenCVLogoFinderTest.cpp
