noinst_HEADERS = Exceptions.hpp \
                 Filters.hpp \
                 FilterFactory.hpp \
                 FilterList.hpp \
                 FilterData.hpp

noinst_LIBRARIES = libfilter-generator.a

libfilter_generator_a_SOURCES = Filters.cpp \
                                FilterFactory.cpp \
                                FilterList.cpp \
                                FilterData.cpp
