# Copyright (C) 2018-2024 Werner Turing <werner.turing@protonmail.com>
#
# This file is part of multi-delogo.
#
# multi-delogo is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# multi-delogo is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with multi-delogo.  If not, see <http://www.gnu.org/licenses/>.

noinst_HEADERS = Exceptions.hpp \
                 IOUtils.hpp \
                 Filters.hpp \
                 FilterFactory.hpp \
                 FilterList.hpp \
                 ScriptGenerator.hpp \
                 RegularScriptGenerator.hpp \
                 FuzzyScriptGenerator.hpp \
                 FilterData.hpp

noinst_LIBRARIES = libfilter-generator.a

libfilter_generator_a_SOURCES = IOUtils.cpp \
                                Filters.cpp \
                                FilterFactory.cpp \
                                FilterList.cpp \
                                RegularScriptGenerator.cpp \
                                FuzzyScriptGenerator.cpp \
                                FilterData.cpp
